--- a/clients/web/src/views/Splash/Carousel/index.module.css
+++ b/clients/web/src/views/Splash/Carousel/index.module.css
@@ -1,31 +1,21 @@
 .root {
-  overflow-x: hidden;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
-  &::-webkit-scrollbar {
-    display: none;
-  }
-  white-space: nowrap;
-}
-
-.carousel {
+  overflow: hidden;
   display: flex;
-  align-items: center;
-  animation: slideLeft 60s linear forwards;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin: var(--grid-space-sm);
 }
 
-@keyframes slideLeft {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(-100%);
-  }
-}
-
-.carousel img {
-  height: 250px;
-  width: 250px;
-  margin: var(--grid-space);
+.root img {
+  display: flex;
+  width: calc(25% - 2 * var(--grid-space-sm));
+  margin: var(--grid-space-sm);
   border-radius: var(--corner-radius);
+  opacity: 0.7;
+  transition: opacity 0.5s ease-in-out;
+  cursor: pointer;
+}
+  
+.root img:hover {
+    opacity: 1.0;
 }
