--- a/clients/web/src/views/Splash/Carousel/index.module.css
+++ b/clients/web/src/views/Splash/Carousel/index.module.css
@@ -1,21 +1,11 @@
 .root {
   overflow: hidden;
   display: flex;
-  flex-wrap: wrap;
   flex-direction: row;
-  margin: var(--grid-space-sm);
+  border-top-left-radius: var(--corner-radius);
+  border-bottom-left-radius: var(--corner-radius);
 }
 
 .root img {
-  display: flex;
-  width: calc(25% - 2 * var(--grid-space-sm));
-  margin: var(--grid-space-sm);
-  border-radius: var(--corner-radius);
-  opacity: 0.7;
-  transition: opacity 0.5s ease-in-out;
-  cursor: pointer;
-}
-  
-.root img:hover {
-    opacity: 1.0;
+  width: 100%;
 }
