[clients] adding react-three-[fiber, orbit controls]

--- a/clients/web/src/layout/Navigation/index.module.css
+++ b/clients/web/src/layout/Navigation/index.module.css
@@ -2,6 +2,21 @@
   background: transparent;
 }
 
+.float {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  backdrop-filter: blur(12px);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.logo {
+  color: black;
+  text-decoration: none;
+}
+
 .settings {
   margin-right: var(--grid-space);
 }
