--- a/clients/web/src/layout/Navigation/index.module.css
+++ b/clients/web/src/layout/Navigation/index.module.css
@@ -15,6 +15,13 @@
 .logo {
   color: black;
   text-decoration: none;
+  display: flex;
+  gap: var(--grid-space-lg);
+}
+
+.logo img {
+  width: 50px;
+  height: 50px;
 }
 
 .settings {
